SDK/CMMISDK_Parameters.h

#define SIZE_JOB_INDEX			7		//Size of job custom item
#define SIZE_JOBIMAGE_NAME		32		//Size of job image name
#define SIZE_IMAGEDATA			153600	//Image size (assuming 320 × 480 max.)
#define SIZE_IMAGE_FINDER		307200	//Image size (assuming 640 × 480 max.)


//Job result step
struct CMMISDK_JobStepResult
{
	CMMISDK_SpecularComponent	meas_scie;				//Specular component
	CMMISDK_Observer			obs1;					//Observer 1
	CMMISDK_Observer			obs2;					//Observer 2
	CMMISDK_Illuminant			ill1;					//Illuminant 1
	CMMISDK_Illuminant			ill2;					//Illuminant 2
	CMMISDK_CustomIndex			index[SIZE_JOB_INDEX];	//Custom items
	CMMISDK_OnOff				enable_meas;			//Display measurement button on/off
	CMMISDK_OnOff				enable_prev;			//Display previous button on/off
	CMMISDK_OnOff				enable_next;			//Display next button on/off
	CMMISDK_OnOff				enable_end;				//Display end button on/off
};


//Job image
struct CMMISDK_JobImage
{
	int32_km	width;						//Width (240 fixed)
	int32_km	height;						//Height (128 fixed)
	int32_km	data[SIZE_IMAGEDATA];		//Image data (arranged in Z order from top left)
											//	The data is stored as 1 pixel per element. R, G, and B are each 8 bits.
											//	The data is stored right-aligned in BGR order.
	char		name[SIZE_JOBIMAGE_NAME];	//Image name
};


//Finder image
struct CMMISDK_FinderImage
{
	int32_km  width;					//Width
	int32_km  height;					//Height
	int32_km  data[SIZE_IMAGE_FINDER];	//Image data (arranged in Z order from top left)
	//	The data is stored as 1 pixel per element. R, G, and B are each 8 bits.
	//	The data is stored right-aligned in BGR order.
};
//Image
struct CMMISDK_Image
{
	int32_km  width;					//Width
	int32_km  height;					//Height
	int32_km  data[SIZE_IMAGEDATA];		//Image data (arranged in Z order from top left)
										//	The data is stored as 1 pixel per element. R, G, and B are each 8 bits.
										//	The data is stored right-aligned in BGR order.
};