SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs


    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_JobStepResult
    {
        public CMMISDK_SpecularComponent meas_scie;
        public CMMISDK_Observer obs1;
        public CMMISDK_Observer obs2;
        public CMMISDK_Illuminant ill1;
        public CMMISDK_Illuminant ill2;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_JOB_INDEX)]
        public CMMISDK_CustomIndex[] index;
        public CMMISDK_OnOff enable_meas;
        public CMMISDK_OnOff enable_prev;
        public CMMISDK_OnOff enable_next;
        public CMMISDK_OnOff enable_end;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_JobImage
    {
        public Int32 width;
        public Int32 height;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_IMAGEDATA)]
        public Int32[] data;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_JOBIMAGE_NAME)]
        public byte[] name;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_FinderImage
    {
        public Int32 width;
        public Int32 height;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_IMAGE_FINDER)]
        public Int32[] data;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi, Pack = 1)]
    public struct CMMISDK_Image
    {
        public Int32 width;
        public Int32 height;
        [MarshalAs(UnmanagedType.ByValArray, SizeConst = Define.SIZE_IMAGEDATA)]
        public Int32[] data;
    }

    static partial class Define
    {
        public const Int32 KmWrBattery = 0x01;
        public const Int32 KmWrCalibration = 0x02;
        public const Int32 KmWrPreAnnualCalibraton = 0x04;
        public const Int32 KmWrAnnualCalibraton = 0x08;
        public const Int32 KmWrLampForColor = 0x10;
        public const Int32 KmWrOutOfColorRange = 0x20;
        public const Int32 KmWrOutOfGlossRange = 0x40;
        public const Int32 KmWrLampForGloss = 0x80;
    }

    public enum _error_km
    {
        KmSuccess = 0,
        KmWarning = 1,
        KmErNoConnect = 10,
        KmErInvalidParameter = 25,
        KmErCannotCommand = 30,
        KmErNoData = 45,
        KmErDataProtected = 46,
        KmErOutOfRangeValue = 50,
        KmErConnectFailed = 100,
        KmErDevice = 110,
        KmErAd = 111,
        KmErCharge = 112,
        KmErFlash = 113,
        KmErFinder = 114,
        KmErCalculation = 115,
		KmErCamera = 116,				
        KmErCalibration = 120,
        KmErCalibrationRequired = 130,
        KmErNoCalibrationData = 131,
        KmErTiltDetection = 140,
        KmErNotUse = 170,
        KmErDisagreeCond = 171,
		KmErUvAdjust = 172,				
        KmErBattery = 180,
        KmErMemory = 181,
        KmErMotor = 182,
        KmErNotSupported = 190,
        KmErCalculateColor = 195,
		KmErCalculateCoef = 196,		
        KmErUuid = 198,
        KmEr = 200,
		KmErTimeout = 210,
    }
